--- a/android/app/src/main/res/menu/main.xml
+++ b/android/app/src/main/res/menu/main.xml
@@ -5,4 +5,9 @@
         android:showAsAction="withText|ifRoom" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/action_sign_out"
+        android:title="@string/action_sign_out"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
