--- a/android/app/src/main/res/menu/global.xml
+++ b/android/app/src/main/res/menu/global.xml
@@ -6,8 +6,8 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_sign_out"
-        android:title="@string/action_sign_out"
+        android:id="@+id/action_log_out"
+        android:title="@string/action_log_out"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
