--- a/android/app/src/main/res/menu/main.xml
+++ b/android/app/src/main/res/menu/main.xml
@@ -2,12 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_example" android:title="@string/action_example"
-        android:showAsAction="withText|ifRoom" />
+        app:showAsAction="withText|ifRoom" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="never" />
     <item
-        android:id="@+id/action_sign_out"
-        android:title="@string/action_sign_out"
+        android:id="@+id/action_log_out"
+        android:title="@string/action_log_out"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
