--- a/android/app/src/main/res/layout/start_activity.xml
+++ b/android/app/src/main/res/layout/start_activity.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="50dip"
+        android:layout_marginBottom="70dip"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
 
@@ -34,4 +34,12 @@
         android:paddingRight="@dimen/com_facebook_loginview_padding_right"
         android:paddingBottom="@dimen/com_facebook_loginview_padding_bottom"
         android:onClick="onLoginClick"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dip"
+        android:src="@drawable/powered_by_yelp_white"/>
 </RelativeLayout>
