--- a/android/app/src/main/res/layout/decider_layout.xml
+++ b/android/app/src/main/res/layout/decider_layout.xml
@@ -1,17 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.yksong.noomee.views.DeciderView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:noomee="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:divider="?android:listDivider"
+        android:showDividers="middle"
+        android:layout_marginTop="5dp">
+        <LinearLayout
+            android:id="@+id/cuisine_tab"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/decide_tab_prompt" />
+            android:paddingLeft="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true">
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/chef_hat"
+                android:contentDescription="@string/decide_cuisines" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="22dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/icon"
+                    android:text="@string/decide_cuisines"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="3dp"/>
+                <!--<TextView-->
+                    <!--android:id="@+id/all_tag"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="All"-->
+                    <!--android:background="@drawable/chi_tag"/>-->
+                <com.yksong.noomee.views.ChiTagView
+                    android:id="@+id/chi_tag_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    noomee:selected_only="true"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="16dp">-->
+            <!--<ImageView-->
+                <!--android:layout_width="24dp"-->
+                <!--android:layout_height="24dp"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--android:src="@drawable/triangle_right"-->
+                <!--android:contentDescription="@string/decide_more_options" />-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="22dp"-->
+                <!--android:text="@string/decide_more_options"-->
+                <!--android:textSize="20sp"/>-->
+        <!--</LinearLayout>-->
     </LinearLayout>
 
     <com.melnykov.fab.FloatingActionButton
@@ -21,8 +81,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_fork"
-        fab:fab_colorNormal="@color/colorPrimary"
-        fab:fab_colorPressed="@color/colorPrimaryDark"
-        fab:fab_colorRipple="@color/ripple_material_dark"/>
-
+        noomee:fab_colorNormal="@color/colorPrimary"
+        noomee:fab_colorPressed="@color/colorPrimaryDark"
+        noomee:fab_colorRipple="@color/ripple_material_dark"/>
 </com.yksong.noomee.views.DeciderView>
