Fix datepicker and timepicker in lollopop

--- a/android/app/src/main/res/layout/new_event_layout.xml
+++ b/android/app/src/main/res/layout/new_event_layout.xml
@@ -45,18 +45,16 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonPickTime"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="pick_time"
-            android:onClick="showTimePickerDialog" />
-
-        <Button
             android:id="@+id/buttonPickDate"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="pick_date"
-            android:onClick="showDatePickerDialog" />
+            android:text="pick_date" />
+
+        <Button
+            android:id="@+id/buttonPickTime"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="pick_time" />
 
         <!--LinearLayout
             android:layout_width="fill_parent"
