--- a/android/app/src/main/res/values-v21/themes.xml
+++ b/android/app/src/main/res/values-v21/themes.xml
@@ -10,5 +10,11 @@
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
         <!-- Actionbar/Toolbar theme-->
         <item name="actionBarStyle">@style/actionBarStyle</item>
+        <!-- Noomee Dialog Themes -->
+        <item name="android:alertDialogTheme">@style/NoomeeDialogTheme</item>
+    </style>
+
+    <style name="NoomeeDialogTheme" parent="android:Theme.Material.Light.Dialog.Alert">
+        <item name="android:colorAccent">@color/colorPrimaryDark</item>
     </style>
 </resources>
