--- a/android/app/src/main/res/layout/cuisine_dialog.xml
+++ b/android/app/src/main/res/layout/cuisine_dialog.xml
@@ -1,40 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<com.yksong.noomee.views.ChiTagView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/chi_tag_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:id="@+id/loading"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:paddingLeft="24dp"
-        android:paddingTop="18dp"
-        android:paddingRight="18dp">
-
-        <ProgressBar
-            android:id="@+id/progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:max="10000"
-            android:layout_marginRight="24dp" />
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/Loading"/>
-    </LinearLayout>
-
-    <com.yksong.noomee.views.ChiTagView
-        android:id="@+id/chi_tag_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="3dp"/>
-
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="3dp"/>
