--- a/android/app/src/main/res/layout/activity_layout.xml
+++ b/android/app/src/main/res/layout/activity_layout.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@android:id/list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cardList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
