--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -8,20 +8,51 @@
     card_view:cardCornerRadius="4dp"
     android:layout_margin="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="match_parent"
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/powered_by_yelp_white"-->
+            <!--android:background="@color/colorPrimary"-->
+            <!--android:text="contact det"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="14dp"/>-->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/powered_by_yelp_white"
-            android:background="@color/colorPrimary"
-            android:text="contact det"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/white"
-            android:textSize="14dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp">
+            <com.facebook.widget.ProfilePictureView
+                android:id="@+id/profile_picture"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:contentDescription="@string/restaurant_icon" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="12dp">
+                <TextView
+                    android:textSize="12sp"
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"/>
+                <TextView
+                    android:textSize="12sp"
+                    android:id="@+id/time_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"/>
+            </LinearLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtEvent"
@@ -29,10 +60,7 @@
             android:layout_height="wrap_content"
             android:text="I am going to eat at XXX at xxx pm on XXX day"
             android:gravity="center_vertical"
-            android:textSize="10dp"
-            android:layout_below="@id/imageView1"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"/>
+            android:textSize="10dp"/>
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,8 +69,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/txtEvent">
+            android:layout_marginTop="20dp">
 
             <Button android:id="@+id/going_button"
                 android:layout_width="wrap_content"
@@ -54,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:text="Comment"/>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
