--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -68,8 +68,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:orientation="horizontal">
 
             <Button android:id="@+id/going_button"
                 android:layout_width="wrap_content"
@@ -82,7 +81,4 @@
                 android:text="Comment"/>
         </LinearLayout>
     </LinearLayout>
-
-
-
 </android.support.v7.widget.CardView>
