--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -63,22 +63,27 @@
             android:textSize="10dp"/>
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="12dp"
             android:orientation="horizontal">
 
             <Button android:id="@+id/going_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="I'm Going!"/>
+                android:text="Join"
+                android:textSize="11sp"
+                android:textColor="@color/colorPrimaryDark"
+                style="?android:attr/borderlessButtonStyle"/>
 
             <Button android:id="@+id/_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Comment"/>
+                android:text="Comment"
+                android:textSize="11sp"
+                android:textColor="@color/colorPrimaryDark"
+                style="?android:attr/borderlessButtonStyle"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
