--- a/android/app/src/main/res/layout/new_event_layout.xml
+++ b/android/app/src/main/res/layout/new_event_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.yksong.noomee.views.NewEventView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:theme="@android:style/Theme.WithActionBar"
+    android:layout_height="match_parent"
     android:clickable="true" android:focusableInTouchMode="true" >
 
     <LinearLayout
@@ -68,7 +68,7 @@
                 android:text="Location: "
                 android:layout_weight="2"/>
 
-            <AutoCompleteTextView
+            <com.yksong.noomee.widget.InstantAutoComplete
                 android:id="@+id/eventLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
