--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardCornerRadius="4dp"
+    card_view:cardCornerRadius="5dp"
     android:layout_margin="5dp">
 
     <LinearLayout
@@ -33,7 +33,7 @@
                 android:id="@+id/profile_picture"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:contentDescription="@string/restaurant_icon" />
+                android:contentDescription="@string/user_icon" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,14 +54,26 @@
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtEvent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="I am going to eat at XXX at xxx pm on XXX day"
-            android:gravity="center_vertical"
-            android:textSize="10dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="12dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/restaurant_picture"
+                android:layout_width="50dp"
+                android:layout_height="fill_parent"
+                android:contentDescription="@string/restaurant_icon" />
 
+            <TextView
+                android:id="@+id/txtEvent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:text="I am going to eat at XXX at xxx pm on XXX day"
+                android:gravity="center_vertical"
+                android:textSize="12dp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
