--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -58,21 +58,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="12dp"
+            android:paddingTop="12dp"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/restaurant_picture"
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:contentDescription="@string/restaurant_icon" />
 
-            <TextView
-                android:id="@+id/txtEvent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:text="I am going to eat at XXX at xxx pm on XXX day"
-                android:gravity="center_vertical"
-                android:textSize="12dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="12dp"
+                android:paddingTop="12dp"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txtEvent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="I am going to eat at XXX at xxx pm on XXX day"
+                    android:gravity="center_vertical"
+                    android:textSize="12dp"/>
+
+                <TextView
+                    android:id="@+id/people_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="xxx and yyy are going"
+                    android:gravity="center_vertical"
+                    android:textSize="12dp"/>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
