--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -5,7 +5,6 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
     card_view:cardCornerRadius="5dp"
     android:layout_margin="5dp">
 
@@ -29,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp">
+            android:layout_marginLeft="12dp">
             <com.facebook.widget.ProfilePictureView
                 android:id="@+id/profile_picture"
                 android:layout_width="36dp"
@@ -70,15 +69,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="12dp"
+                android:paddingLeft="24dp"
                 android:paddingTop="12dp"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/txtEvent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
                     android:text="I am going to eat at XXX at xxx pm on XXX day"
+                    android:gravity="center_vertical"
+                    android:textSize="14dp"/>
+
+                <TextView
+                    android:id="@+id/event_time_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textSize="12dp"/>
 
@@ -86,7 +91,6 @@
                     android:id="@+id/people_list"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
                     android:text="xxx and yyy are going"
                     android:gravity="center_vertical"
                     android:textSize="12dp"/>
