--- a/android/app/src/main/res/layout/restaurant_card_view.xml
+++ b/android/app/src/main/res/layout/restaurant_card_view.xml
@@ -5,7 +5,10 @@
     android:orientation="vertical"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:divider="?android:listDivider"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="wrap_content"
