--- a/android/app/src/main/res/layout/card_layout.xml
+++ b/android/app/src/main/res/layout/card_layout.xml
@@ -59,6 +59,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="12dp"
             android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/restaurant_picture"
